test/error/incomplete_target.cpp
#include "Halide.h"
#include <stdio.h>

using namespace Halide;

int main(int argc, char **argv) {
    Target t("debug");

    printf("Success!\n");
    return 0;
}
